--- a/docs/cli/witr.1
+++ b/docs/cli/witr.1
@@ -34,19 +34,19 @@ witr explains why a process or port is running by tracing its ancestry.
 	disable colorized output
 
 .PP
-\fB--pid\fP=""
+\fB-p\fP, \fB--pid\fP=""
 	pid to look up
 
 .PP
-\fB--port\fP=""
+\fB-o\fP, \fB--port\fP=""
 	port to look up
 
 .PP
-\fB--short\fP[=false]
+\fB-s\fP, \fB--short\fP[=false]
 	show only ancestry
 
 .PP
-\fB--tree\fP[=false]
+\fB-t\fP, \fB--tree\fP[=false]
 	show only ancestry as a tree
 
 .PP
